--- a/STMrectifier.ioc
+++ b/STMrectifier.ioc
@@ -245,7 +245,7 @@ PE10.GPIOParameters=GPIO_Speed,GPIO_Label
 PE10.GPIO_Label=VT12
 PE10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE10.Locked=true
-PE10.Mode=Output Compare2 CH2 CH2N
+PE10.Mode=PWM Generation2 CH2 CH2N
 PE10.Signal=TIM1_CH2N
 PE11.GPIOParameters=GPIO_Speed,GPIO_Label
 PE11.GPIO_Label=VT11
@@ -425,15 +425,15 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2 CH2N
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
-TIM1.Channel-Output\ Compare2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-Output Compare2 CH2 CH2N
+TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N
 TIM8.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation1 CH1 CH1N
