Set timer's frequency

--- a/STMrectifier.ioc
+++ b/STMrectifier.ioc
@@ -196,7 +196,7 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=USER_Btn
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
@@ -433,10 +433,18 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM1
+TIM1.Period=4319
+TIM1.Prescaler=0
+TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=2159
+TIM1.Pulse-PWM\ Generation2\ CH2\ CH2N=2159
 TIM8.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation1 CH1 CH1N
+TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation1 CH1 CH1N,Period,Pulse-PWM Generation1 CH1 CH1N,Pulse-PWM Generation3 CH3 CH3N
+TIM8.Period=4319
+TIM8.Pulse-PWM\ Generation1\ CH1\ CH1N=2159
+TIM8.Pulse-PWM\ Generation3\ CH3\ CH3N=2159
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
