--- a/STMrectifier.ioc
+++ b/STMrectifier.ioc
@@ -263,12 +263,14 @@ PE9.GPIO_Label=VT7
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
-PF0.GPIOParameters=GPIO_Label
+PF0.GPIOParameters=GPIO_Speed,GPIO_Label
 PF0.GPIO_Label=VT1_4
+PF0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF0.Locked=true
 PF0.Signal=GPIO_Output
-PF1.GPIOParameters=GPIO_Label
+PF1.GPIOParameters=GPIO_Speed,GPIO_Label
 PF1.GPIO_Label=VT2_5
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF1.Locked=true
 PF1.Signal=GPIO_Output
 PF11.GPIOParameters=GPIO_Label
@@ -279,8 +281,9 @@ PF12.GPIOParameters=GPIO_Label
 PF12.GPIO_Label=I_FAULT
 PF12.Locked=true
 PF12.Signal=GPIO_Input
-PF2.GPIOParameters=GPIO_Label
+PF2.GPIOParameters=GPIO_Speed,GPIO_Label
 PF2.GPIO_Label=VT3_6
+PF2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF2.Locked=true
 PF2.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
@@ -433,7 +436,8 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N
+TIM1.CounterMode=TIM_COUNTERMODE_UP
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,CounterMode
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM1
 TIM1.Period=4319
 TIM1.Prescaler=0
