--- a/STMrectifier.ioc
+++ b/STMrectifier.ioc
@@ -1,38 +1,55 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV6
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV6
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC2.ExternalTrigConv=ADC_SOFTWARE_START
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,NbrOfConversion,ExternalTrigConv
+ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV6
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC3.ExternalTrigConv=ADC_SOFTWARE_START
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=USART3
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM8
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP4=DMA
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM8
+Mcu.IPNb=11
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -90,7 +107,9 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -330,7 +349,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -416,11 +435,11 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN0.0=ADC3_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.0=ADC1_IN12
 SH.ADCx_IN12.ConfNb=1
 SH.ADCx_IN13.0=ADC2_IN13,IN13
 SH.ADCx_IN13.ConfNb=1
-SH.ADCx_IN3.0=ADC3_IN3,IN3
+SH.ADCx_IN3.0=ADC3_IN3
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
@@ -437,12 +456,13 @@ SH.S_TIM8_CH3.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.CounterMode=TIM_COUNTERMODE_UP
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,CounterMode
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,CounterMode,TIM_MasterOutputTrigger
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM1
 TIM1.Period=4319
 TIM1.Prescaler=0
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=2159
 TIM1.Pulse-PWM\ Generation2\ CH2\ CH2N=2159
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM8.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation1 CH1 CH1N,Period,Pulse-PWM Generation1 CH1 CH1N,Pulse-PWM Generation3 CH3 CH3N
